--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     
+<div class="buttons">
+	<button class="sizeUp">+</button>
+	<button class="sizeDown">-</button>
+	<button class="color">color</button>
+</div>
+<div class="text">
+	<p>Lorem ipsum dolor sit amet.</p>
+</div>
+    
     <script src="main.js"></script>
 </body>
 </html>
